objects/Group_Logistics__c.object
<CustomObject>
    <fields>
        <fullName>Vendor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>ServiceProviderRelationship__c</referenceTo>
        <relationshipLabel>Group Logistics</relationshipLabel>
        <relationshipName>Group_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Logistics</relationshipLabel>
        <relationshipName>Group_Logistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGS_ACTREPT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS ACTREPT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_BYPASS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS BYPASS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_CTRLREPT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS CTRLREPT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_ERRRPT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS ERRRPT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGS_ERRSMRY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS ERRSMRY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Performs_Handicapped_Certification__c</fullName>
        <label>Who Performs Handicapped Certification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X834_Trigger_File_Dataset__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>834 Trigger File Dataset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group Logistics</label>
    <nameField>
        <displayFormat>GRPLOG-{000000}</displayFormat>
        <label>Group Logistics ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Logistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>